--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@remixicon/react": "^4.7.0",
     "@tremor/react": "^3.18.7",
     "@vitejs/plugin-react": "^5.0.4",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.552.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^3.3.0",
